--- a/index_Odys.html
+++ b/index_Odys.html
@@ -1,5 +1,6 @@
 <html>
 <h1>Facts about Odyseus</h1>
+<img src="odyseus-on-ship copy.jpg"/>
 1. He was from Ithaca
 2. He was the royal son of King Laertes
 2.5 He has a son, Telemoceus, prince of Ithaca
@@ -26,5 +27,3 @@
 20. Odyseus recognized Argos and spoke praise for him
 21. As Odyseus walked away, Argos died 
 </html>
-
-
