--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <h1>Facts about Odyseus</h1>
 <img src="odyseus-on-ship copy.jpg"/>
+<body>
+    <ol type = "1">
 1. He was from Ithaca
 2. He was the royal son of King Laertes
 2.5 He has a son, Telemoceus, prince of Ithaca
@@ -26,4 +28,6 @@
 19. Argos thumped his tail on seeing his master return, feeble as he was
 20. Odyseus recognized Argos and spoke praise for him
 21. As Odyseus walked away, Argos died 
+</ol>
+</body>
 </html>
