--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-<h1>Facts about Odyseus</h1>
+<head>
+    <title>What Odysseus Did</title>
+</head>
 <img src="odyseus-on-ship copy.jpg"/>
+<h1>Facts about Odyseus</h1>
 <body>
     <ol type = "1">
 1. He was from Ithaca
