--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>What Odysseus Did</title>
 </head>
 <img src="odyseus-on-ship copy.jpg"/>
-<h1>Facts about Odyseus</h1>
+<h1>What Odysseus Did</h1>
 <body>
     <ol type = "1">
 1. He was from Ithaca
