--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <img src="odyseus-on-ship copy.jpg"/>
 <h1>What Odysseus Did</h1>
 <body>
-    <ol type = "1">
-1. He was from Ithaca
-2. He was the royal son of King Laertes
-2.5 He has a son, Telemoceus, prince of Ithaca
-3. He led battalions in the Trojan War
+    <ol>
+<li>He was from Ithaca</li>
+<li>He was the royal son of King Laertes</li>
+<li>He has a son, Telemoceus, prince of Ithaca</li>
+<li>He led battalions in the Trojan War</li>
 4. He conceived the Trojan horse stratagem
 5. He was inside the Trojan Horse when it was dragged in through the gates of Troy
 6. He joined in the slaughter of Trojans and the destruction of Troy
