--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <li>He was the royal son of King Laertes</li>
 <li>He has a son, Telemoceus, prince of Ithaca</li>
 <li>He led battalions in the Trojan War</li>
-4. He conceived the Trojan horse stratagem
+<li>4. He conceived the Trojan horse stratagem</li>
 5. He was inside the Trojan Horse when it was dragged in through the gates of Troy
 6. He joined in the slaughter of Trojans and the destruction of Troy
 7. He drove a stake into the Cyclop's eye and blinded him, with the help of his men
