--- a/index.html
+++ b/index.html
@@ -10,27 +10,25 @@
 <li>He was the royal son of King Laertes</li>
 <li>He has a son, Telemoceus, prince of Ithaca</li>
 <li>He led battalions in the Trojan War</li>
-<li>4. He conceived the Trojan horse stratagem</li>
-5. He was inside the Trojan Horse when it was dragged in through the gates of Troy
-6. He joined in the slaughter of Trojans and the destruction of Troy
-7. He drove a stake into the Cyclop's eye and blinded him, with the help of his men
-8. He told the Cyclops his real name
-9. The Cyclops was a son of Poseidon
-10. In his fury, the Cyclops beseeched his father to lay waste to Odyseus
-11. Odyseus was favored by Athena
-12. Zeus gave his brother, Poseidon, permission to harry Odyseus and his crew, destroy their boats, and delay his passage home 
-13. Odyseus was driven to a rock island and taken care of by the nymph, Calypso
-14. Eventually, Athena asked Zeus to order his release
-15. Mercury was sent to the island with a message from the high gods: let Odyseus return to his homel at last
-16. obediently if Reluctantly, Calypso furnished Odyseus with materials and supplies and advice 
-17. Odyseus built a sturdy raft
-18. Odyseus had a dog named Argos, who was a puppy when he left for Troy
-18.5 After his master left, Argos was neglected
-18.6 Argos slept on a pile of dung in the town of Ithaca outside the palace of his master
-18.7 Odyseus returned to his palace disguised as a begger
-19. Argos thumped his tail on seeing his master return, feeble as he was
-20. Odyseus recognized Argos and spoke praise for him
-21. As Odyseus walked away, Argos died 
+<li>He conceived the Trojan horse stratagem</li>
+<li>He was inside the Trojan Horse when it was dragged in through the gates of Troy</li>
+<li>He joined in the slaughter of Trojans and the destruction of Troy</li>
+<li>He drove a stake into the Cyclop's eye and blinded him, with the help of his men</li>
+<li>He told the Cyclops his real name</li>
+<li>The Cyclops was a son of Poseidon</li>
+<li>In his fury, the Cyclops beseeched his father to lay waste to Odyseus</li>
+<li>Odyseus was favored by Athena</li>
+<li>Zeus gave his brother, Poseidon, permission to harry Odyseus and his crew, destroy their boats, and delay his passage home</li> 
+<li>Odyseus was driven to a rock island and taken care of by the nymph, Calypso</li>
+<li>Eventually, Athena asked Zeus to order his release</li>
+<li>Mercury was sent to the island with a message from the high gods: let Odyseus return to his homel at last</li>
+<li>Obediently if Reluctantly, Calypso furnished Odyseus with materials and supplies and advice</li> 
+<li>Odyseus built a sturdy raft, furnished with materials and supplies and advice by Calypso</li>
+<li>Odyseus had a dog named Argos, who was a puppy when he left for Troy. But after his master left, Argos was neglected. The dog slept on a pile of dung in the town outside the palace of his master</li>
+<li>Odyseus returned to Ithaca disguised as a begger</li>
+<li>As Odysseus stood outside his palace, Argos thumped his tail on seeing his master</li>
+<li>Odyseus recognized his dog, feeble as he was, and spoke praise for him. As Odyseus walked away, Argos died</li>
+ 
 </ol>
 </body>
 </html>
