--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>What Odysseus Did</title>
+    <title>What Odysseus Did 2</title>
 </head>
 <img src="odyseus-on-ship copy.jpg"/>
 <h1>What Odysseus Did</h1>
